Update static path in nginx conf

--- a/data/nginx/nginx.conf
+++ b/data/nginx/nginx.conf
@@ -54,8 +54,8 @@ server {
 
     location ^~ /static {
         # add_header Access-Control-Allow-Origin *;
-        # alias /home/app/web/static/;
-	    alias /home/ubuntu/pf-assessment-dsrc/platform_code/static/;
+        alias /home/app/web/static/;
+	    # alias /home/ubuntu/pf-assessment-dsrc/platform_code/static/;
 	    # alias /home/ubuntu/pf-assessment-dsrc/platform_code/assessment/static/;
 	    try_files $uri $uri/ @secondStatic;
     }
