Update second static path in nginx conf

--- a/data/nginx/nginx.conf
+++ b/data/nginx/nginx.conf
@@ -61,7 +61,8 @@ server {
     }
 
     location @secondStatic {
-    	root /home/ubuntu/pf-assessment-dsrc/platform_code/assessment/static/;
+        root /home/app/web/assessment/static
+    	# root /home/ubuntu/pf-assessment-dsrc/platform_code/assessment/static/;
     }
 }
 
