--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,6 @@ services:
     build: ./platform_code
     container_name: django
     command: python manage.py runserver 0.0.0.0:8000
-    # command: sh -c "python manage.py makemigrations --merge &&
-    #                 python manage.py migrate &&
-    #                 python manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
     volumes:
@@ -24,7 +21,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env
+      - ./.env.dev
     ports:
       - "5432:5432"
     container_name: postgres
