Update upstream server

--- a/data/nginx/nginx.conf
+++ b/data/nginx/nginx.conf
@@ -46,23 +46,18 @@ server {
 
 
     location / {
-        proxy_pass http://0.0.0.0:8000;
+        proxy_pass http://dev_platform; # http://0.0.0.0:8000;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
+        proxy_set_header Access-Control-Allow-Origin *;
+        #proxy_set_header Access-Control-Allow-Origin https://preprod.assessment.substra.ai;
         proxy_redirect off;
     }
 
     location ^~ /static {
-        # add_header Access-Control-Allow-Origin *;
         alias /home/app/web/static/;
-	    # alias /home/ubuntu/pf-assessment-dsrc/platform_code/static/;
 	    # alias /home/ubuntu/pf-assessment-dsrc/platform_code/assessment/static/;
-	    try_files $uri $uri/ @secondStatic;
-    }
-
-    location @secondStatic {
-        root /home/app/web/assessment/static
-    	# root /home/ubuntu/pf-assessment-dsrc/platform_code/assessment/static/;
+	    # add_header Access-Control-Allow-Origin *;
     }
 }
 
