Fix css not loaded

--- a/data/nginx/nginx-prod-like-local.conf
+++ b/data/nginx/nginx-prod-like-local.conf
@@ -16,7 +16,7 @@ http {
         }
 
         location ^~ /static {
-            # pb with statics
+            include /etc/nginx/mime.types;
             add_header Access-Control-Allow-Origin *;
             alias /home/app/web/static/;
         }
