--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -58,7 +58,7 @@ services:
   #   volumes:
   #     - ./data/certbot/conf:/etc/letsencrypt
   #     - ./data/certbot:/var/www/certbot
-  #   command: "certbot certonly --webroot --webroot-path=/var/www/certbot --email nathanael.cretin@substra.org --agree-tos --no-eff-email -d preprod.assessment.substra.ai -d www.preprod.assessment.substra.ai"
+  #   command: "certbot certonly --webroot --webroot-path=/var/www/certbot --email nathanael.cretin@substra.org --agree-tos --no-eff-email -d assessment.substra.ai -d www.assessment.substra.ai"
   #   entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 volumes:
