Update deploy docs

--- a/data/nginx/nginx.conf
+++ b/data/nginx/nginx.conf
@@ -55,6 +55,7 @@ server {
     }
 
     location ^~ /static {
+        include /etc/nginx/mime.types;
         alias /home/app/web/static/;
 	    # alias /home/ubuntu/pf-assessment-dsrc/platform_code/assessment/static/;
 	    # add_header Access-Control-Allow-Origin *;
