Fix pip upgrade

--- a/platform_code/Dockerfile
+++ b/platform_code/Dockerfile
@@ -16,7 +16,7 @@ COPY . .
 RUN apk update \
     && apk add postgresql-dev gcc python3-dev musl-dev
 
-RUN python -m pip install --upgrade pip
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 # make entrypoint.sh executable
