--- a/platform_code/Dockerfile.prod
+++ b/platform_code/Dockerfile.prod
@@ -17,7 +17,7 @@ RUN apk update \
     && apk add postgresql-dev gcc python3-dev musl-dev
 
 
-RUN python -m pip install --upgrade pip
+RUN pip install --upgrade pip
 
 COPY . .
 
