--- a/nginx/preprodassessment.substra.ai.conf
+++ b/nginx/preprodassessment.substra.ai.conf
@@ -7,7 +7,7 @@ server {
     listen 80;
     listen [::]:80;
     server_name preprodassessment.substra.ai;
-    server_tokens off;
+    server_tokens off; # Do not show nginx version
 
     location / {
         return 301 https://$host$request_uri;
@@ -55,4 +55,3 @@ server {
         alias /home/app/web/static/;
     }
 }
-
