--- a/nginx/assessment.substra.ai.conf
+++ b/nginx/assessment.substra.ai.conf
@@ -25,28 +25,27 @@ server {
     ssl_certificate_key /etc/ssl/assessment.substra.ai.key;
 
     # Inspired from https://ssl-config.mozilla.org/
-    # ssl_buffer_size 8k;
-    # ssl_session_timeout 1d;
-    # ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
-    # ssl_session_tickets off;
+    ssl_buffer_size 8k;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
+    ssl_session_tickets off;
 
-    # # modern configuration
-    # ssl_protocols TLSv1.3;
-    # ssl_prefer_server_ciphers off;
+    # Modern configuration
+    ssl_protocols TLSv1.3;
+    ssl_prefer_server_ciphers off;
 
-    # # HSTS (ngx_http_headers_module is required) (63072000 seconds)
-    # add_header Strict-Transport-Security "max-age=63072000" always;
+    # HSTS (ngx_http_headers_module is required) (63072000 seconds)
+    add_header Strict-Transport-Security "max-age=63072000" always;
 
-    # # OCSP stapling
-    # ssl_stapling on;
-    # ssl_stapling_verify on;
+    # OCSP stapling
+    ssl_stapling on;
+    ssl_stapling_verify on;
 
     location / {
         proxy_pass http://dev_platform;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
-        proxy_set_header Access-Control-Allow-Origin *;
-        # proxy_set_header Access-Control-Allow-Origin https://assessment.substra.ai;
+        proxy_set_header Access-Control-Allow-Origin https://assessment.substra.ai;
         proxy_redirect off;
     }
 
