--- a/docker-compose.preprod.yml
+++ b/docker-compose.preprod.yml
@@ -41,9 +41,9 @@ services:
       - main
     volumes:
       - static_volume:/home/app/web/static
-      - ./nginx/preprodassessment.substra.ai.conf:/etc/nginx/conf.d/custom.conf
-      - ../ssl/substra.ai.crt:/etc/ssl/preprodassessment.substra.ai.crt
-      - ../ssl/myserver.key:/etc/ssl/preprodassessment.substra.ai.key
+      - ./nginx/preprodassessment.labelia.org.conf:/etc/nginx/conf.d/custom.conf
+      - ../ssl/labelia.org.crt:/etc/ssl/preprodassessment.labelia.org.crt
+      - ../ssl/labeliadotorg.key:/etc/ssl/preprodassessment.labelia.org.key
     depends_on:
       - web
 
