--- a/nginx/preprodassessment.labelia.org.conf
+++ b/nginx/preprodassessment.labelia.org.conf
@@ -6,7 +6,7 @@ upstream dev_platform {
 server {
     listen 80;
     listen [::]:80;
-    server_name preprodassessment.substra.ai;
+    server_name preprodassessment.labelia.org;
     server_tokens off; # Do not show nginx version
 
     location / {
@@ -17,12 +17,12 @@ server {
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
-    server_name preprodassessment.substra.ai;
+    server_name preprodassessment.labelia.org;
     server_tokens off;
 
     # SSL assets
-    ssl_certificate /etc/ssl/preprodassessment.substra.ai.crt;
-    ssl_certificate_key /etc/ssl/preprodassessment.substra.ai.key;
+    ssl_certificate /etc/ssl/preprodassessment.labelia.org.crt;
+    ssl_certificate_key /etc/ssl/preprodassessment.labelia.org.key;
 
     # Inspired from https://ssl-config.mozilla.org/
     ssl_buffer_size 8k;
@@ -45,7 +45,7 @@ server {
         proxy_pass http://dev_platform;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
-        proxy_set_header Access-Control-Allow-Origin https://preprodassessment.substra.ai;
+        proxy_set_header Access-Control-Allow-Origin https://preprodassessment.labelia.org;
         proxy_redirect off;
     }
 
