Fix key file name

--- a/nginx/preprodassessment.labelia.org.conf
+++ b/nginx/preprodassessment.labelia.org.conf
@@ -22,7 +22,7 @@ server {
 
     # SSL assets
     ssl_certificate /etc/ssl/preprodassessment.labelia.org.crt;
-    ssl_certificate_key /etc/ssl/preprodassessment.labelia.org.key;
+    ssl_certificate_key /etc/ssl/preprodassessment.labeliadotorg.key;
 
     # Inspired from https://ssl-config.mozilla.org/
     ssl_buffer_size 8k;
