--- a/docker-compose.preprod.yml
+++ b/docker-compose.preprod.yml
@@ -43,7 +43,7 @@ services:
       - static_volume:/home/app/web/static
       - ./nginx/preprodassessment.labelia.org.conf:/etc/nginx/conf.d/custom.conf
       - ../ssl/labelia.org.crt:/etc/ssl/preprodassessment.labelia.org.crt
-      - ../ssl/labeliadotorg.key:/etc/ssl/preprodassessment.labelia.org.key
+      - ../ssl/labeliadotorg.key:/etc/ssl/preprodassessment.labeliadotorg.key
     depends_on:
       - web
 
