Fix issue nginx conf

--- a/nginx/preprodassessment.labelia.org.conf
+++ b/nginx/preprodassessment.labelia.org.conf
@@ -40,7 +40,7 @@ server {
     # OCSP stapling
     ssl_stapling on;
     ssl_stapling_verify on;
-    ssl_trusted_certificate /etc/ssl/preprodassessment.GandiStandardSSLCA2.pem
+    ssl_trusted_certificate /etc/ssl/preprodassessment.GandiStandardSSLCA2.pem;
 
     location / {
         proxy_pass http://dev_platform;
