--- a/nginx/assessment.labelia.org.conf
+++ b/nginx/assessment.labelia.org.conf
@@ -53,5 +53,10 @@ server {
         include /etc/nginx/mime.types;
         alias /home/app/web/static/;
     }
+
+    location ^~ /media/ {
+        include /etc/nginx/mime.types;
+        alias /home/app/web/media/;
+    }
 }
 
