--- a/platform_code/Dockerfile.prod
+++ b/platform_code/Dockerfile.prod
@@ -14,7 +14,8 @@ ENV PYTHONUNBUFFERED 1
 
 # install psycopg2 dependencies
 RUN apk update \
-    && apk add postgresql-dev gcc python3-dev musl-dev jpeg-dev zlib-dev
+    && apk add postgresql-dev gcc python3-dev \
+        musl-dev jpeg-dev zlib-dev libpq libjpeg
 
 
 RUN pip install --upgrade pip
