--- a/nginx/assessment.labelia.org.conf
+++ b/nginx/assessment.labelia.org.conf
@@ -54,7 +54,7 @@ server {
         alias /home/app/web/static/;
     }
 
-    location ^~ /media/ {
+    location /media/ {
         include /etc/nginx/mime.types;
         alias /home/app/web/media/;
     }
