--- a/docker-compose.preprod.yml
+++ b/docker-compose.preprod.yml
@@ -12,6 +12,7 @@ services:
       - main
     volumes:
       - static_volume:/home/app/web/static
+      - media_volume:/home/app/web/media
     expose:
       - 8080
     env_file:
@@ -41,6 +42,7 @@ services:
       - main
     volumes:
       - static_volume:/home/app/web/static
+      - media_volume:/home/app/web/media
       - ./nginx/preprodassessment.labelia.org.conf:/etc/nginx/conf.d/custom.conf
       - ../ssl/labelia.org.crt:/etc/ssl/preprodassessment.labelia.org.crt
       - ../ssl/labeliadotorg.key:/etc/ssl/preprodassessment.labeliadotorg.key
