--- a/platform_code/Dockerfile.prod
+++ b/platform_code/Dockerfile.prod
@@ -50,7 +50,7 @@ RUN mkdir $APP_HOME/media
 WORKDIR $APP_HOME
 
 # install dependencies
-RUN apk update && apk add jpeg-dev zlib-dev libpq
+RUN apk update && apk add libpq
 COPY --from=builder /code/wheels /wheels
 COPY --from=builder /code/requirements.txt .
 RUN /usr/local/bin/python -m pip install --upgrade pip
