Update conf preprod

--- a/nginx/prod-like-local.conf
+++ b/nginx/prod-like-local.conf
@@ -21,4 +21,9 @@ server {
         alias /home/app/web/static/;
         include /etc/nginx/mime.types;
     }
+    
+    location ^~ /media/ {
+        include /etc/nginx/mime.types;
+        alias /home/app/web/media/;
+    }
 }
