--- a/nginx/preprodassessment.labelia.org.conf
+++ b/nginx/preprodassessment.labelia.org.conf
@@ -53,4 +53,9 @@ server {
         include /etc/nginx/mime.types;
         alias /home/app/web/static/;
     }
+
+    location ^~ /media/ {
+        include /etc/nginx/mime.types;
+        alias /home/app/web/media/;
+    }
 }
