--- a/platform_code/requirements.txt
+++ b/platform_code/requirements.txt
@@ -9,6 +9,7 @@ django-markdownify==0.9.0
 django-modeltranslation==0.16.1
 django-ckeditor==6.1.0
 requests==2.24.0
+sentry-sdk==1.5.12
 pyjwt==1.7.1
 plotly==4.13.0
 pillow==8.1.0
