--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,10 +28,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup Python 3.8.0-alpine
+      - name: Setup Python 3.8.0
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8.0-alpine
+          python-version: 3.8.0
 
       - name: Install Dependencies
         run: |
