--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,9 +23,9 @@ jobs:
       postgres_main:
         image: postgres:latest
         env:
-          - POSTGRES_USER: postgres
-          - POSTGRES_PASSWORD: postgres
-          - POSTGRES_BD: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_BD: postgres
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
